--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,6 +1,6 @@
 :root {
     font-size: 16px;
-    font-family: 'verdana';
+    font-family: 'sans-serif';
     --text-primary: #b6b6b6;
     --text-secondary: #ececec;
   
@@ -25,3 +25,43 @@
 .hidden-movie {
     display: none;
 }
+
+/* .movie-display {
+    width: 75%;
+    height: 75%;
+    background-color: whitesmoke;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 2em;
+    border-radius: 1em;
+    opacity: 0;
+    transition: all .5s;
+}
+
+.movie-box .overlay{
+    background-color: rgba(0,0,0, .8);
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .5s;
+}
+
+.movie-box-visible {
+    background-color: rgba(0,0,0, .8);
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    opacity: 0;
+    visibility: visible;
+    transition: all .5s;
+} */
