--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -6,62 +6,75 @@
   
 }
 
-.review-form {
-    visibility: hidden;
-}
-
-.review-form-clicked {
-    visibility: visible;
-}
+body {
+    font-family: Circular, Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: whitesmoke;
+    background-color: black;
+    background-image: url(https://hdqwalls.com/wallpapers/grandmaster-thor-ragnarok-2017-5k-g5.jpg);
+    background-size: 120%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+  }
 
 .pic {
     width: 20em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.new-movie-div {
-    visibility: visible;
-}
 
-.hidden-movie {
-    display: none;
-}
 
-/* .movie-display {
-    width: 75%;
-    height: 75%;
-    background-color: whitesmoke;
+    h1{
+      text-align: center;
+      font-family: cursive;
+      font-size: 50px;
+      padding:  0px;
+      font-size: 80px;
+      color: #fff;
+      text-align: center;
+      -webkit-animation: glow 1s ease-in-out infinite alternate;
+      -moz-animation: glow 1s ease-in-out infinite alternate;
+      animation: glow 1s ease-in-out infinite alternate;
+    } 
+
+    @-webkit-keyframes glow {
+      from {
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+      }
+      
+      to {
+        text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+      }
+    }
+
+blockquote {
+    width: 40%;
+    max-height: 100vh;
+    padding: 10px;
+    font: Times, serif;
+    border-left: 3px dashed rgb(59, 51, 51);
+    background-color: rgba(107, 107, 107, 0.699) ;
+    font: Circular, Helvetica, Arial, sans-serif;
+    color: lightgray;
+  }
+
+
+  cite{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 2em;
-    border-radius: 1em;
-    opacity: 0;
-    transition: all .5s;
-}
+    left: 150px;
+  
+  }
+  
+  h3{
+    text-align: center;
+  }
 
-.movie-box .overlay{
-    background-color: rgba(0,0,0, .8);
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    opacity: 0;
-    visibility: hidden;
-    transition: all .5s;
-}
-
-.movie-box-visible {
-    background-color: rgba(0,0,0, .8);
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    opacity: 0;
-    visibility: visible;
-    transition: all .5s;
-} */
+  .list {
+      list-style: none;
+  }
+ 
+  
